fixed the mandatory id in partial type of each PATCH route of each controller
