# production-service/src/part-information-service/dto/part-information/update-part-information.dto.ts
@@ -4,6 +4,24 @@ import { Type } from "class-transformer";
 import { PartialType } from "@nestjs/mapped-types";
 import { ApiProperty } from "@nestjs/swagger";
 
+export class UpdateOnePartInformationDto extends PartialType(CreatePartInformationDto) {
+    @IsOptional()
+    @ApiProperty({
+        description: 'Default price of a given part.',
+        example: 14999.99,
+        type: Number
+    })
+    defaultPrice: number;
+
+    @IsOptional()
+    @ApiProperty({
+        description: 'Time of production of a given part in seconds.',
+        example: 360,
+        type: Number
+    })
+    timeToProduce: number;
+};
+
 export class UpdatePartInformationDto extends PartialType(CreatePartInformationDto) {
     @IsNumber()
     @IsPositive()
